--- a/index.html
+++ b/index.html
@@ -7,26 +7,28 @@
     <title>My Portfolio</title>
 </head>
 <body>
-    <header>
+    <header><hr color="red" size="3"/>
         <h1>Christian Osegbo's Portfolio</h1>           
         <h2>I am a web Developer</h2>
+        <hr color="red" size="3"/>
     </header>                       
     <main>
         <section id="projects">
             <h2>My Projects</h2>
             <div class="project">
-                <h3>Project 1: Birthday Invite</h3>
+               <a href="public/birthday-invite.html"><h3>Birthday Invite Project</h3></a> 
                 <img src="./assets/images/birthday-invite.png" alt="Birthday Invite Preview" height="200">
                 <p>A fun birthday invitation page.</p>
-                <a href="public/birthday-invite.html">View Project</a>
-                <h3>Project 2: My top 3 movies of all time</h3>
+                
+                <a href="public/movie-ranking.html"><h3>My top 3 movies of all time project</h3></a>
                 <img src="./assets/images/movie-ranking.png" alt="Top Movies Preview" height="200">
                 <p>A simple page ranking my top 3 movies.</p>
-                <a href="public/movie-ranking.html">View Project</a>
             </div>
             <!-- Add more projects here -->
         </section>
     </main>
+    <a href="public/contact.html">Contact Me</a>
+    <a href="public/about.html">About Me</a>
     <footer>
         <p>&copy; 2023 My Portfolio</p>
     </footer>
