--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>My Portfolio</title>
 </head>
 <body>
-    <header><hr color="red" size="3"/>
+    <header><hr color="blue" size="3"/>
         <h1>Christian Osegbo's Portfolio</h1>           
         <h2>I am a web Developer</h2>
-        <hr color="red" size="3"/>
+        <hr color="blue" size="3"/>
     </header>                       
     <main>
         <section id="projects">
